# Video_Skills

./: .env.example  .gitattributes  .gitignore  API_func.py  INSTALL.md  LICENSE  README.html  README.md  TODO_Lists.md  _vizdoom.ini  analyze_avalon_roles.py  environment.yml  extract_diplomacy_skillbank_snapshots.py  git-commit-inference.ps1  install_game_ai_agent_env.sh  memory_manage.md  plot_diplomacy_skills.py  plot_training_curves.py  pyproject.toml  readme.md  requirements.txt  run_skillRL_eval.sh  stop_after_step11.sh
TODO_Lists/: ADAPTIVE_PIPELINE_PLAN.md  AGENTIC_SKILL_MEMORY_PLAN.md  SKILLBANK_GRPO_PLAN.md  SKILLBANK_GRPO_PLAN_REWRITE.md  SKILLBANK_INFERENCE_SPEED.md  SKILL_ARCHITECTURE_PLAN.md
ablation_study/: README.md  run_all_ablations.sh  run_all_avalon_da_sequential.sh  run_all_diplomacy_da_sequential.sh  run_avalon_ablation.sh  run_base_model_ablation.sh  run_base_model_avalon_da.sh  run_base_model_diplomacy_da.sh  run_base_model_super_mario.sh  run_diplomacy_ablation.sh  run_no_bank_avalon_da.sh  run_no_bank_diplomacy_da.sh  run_no_skillbank_ablation.sh  run_sft_best_bank_ablation.sh  run_sft_best_bank_avalon_da.sh  run_sft_best_bank_diplomacy_da.sh  run_sft_first_bank_ablation.sh  run_sft_first_bank_avalon_da.sh  run_sft_first_bank_diplomacy_da.sh  run_sft_no_bank_avalon_da.sh  run_sft_no_bank_diplomacy_da.sh  run_sft_no_skillbank_ablation.sh  run_sft_no_skillbank_super_mario.sh  run_super_mario_ablation.sh  run_with_bank_avalon_da.sh  run_with_bank_diplomacy_da.sh  run_with_skillbank.sh
agents/: dummy_agent.py
baselines/: README.md  analyze_baselines.py  run_2048_baseline.sh  run_avalon_baseline.sh  run_candy_crush_baseline.sh  run_claude46_2048.sh  run_claude46_avalon.sh  run_claude46_candy_crush.sh  run_claude46_diplomacy.sh  run_claude46_super_mario.sh  run_claude46_tetris.sh  run_diplomacy_baseline.sh  run_gemini31pro_2048.sh  run_gemini31pro_avalon.sh  run_gemini31pro_candy_crush.sh  run_gemini31pro_diplomacy.sh  run_gemini31pro_super_mario.sh  run_gemini31pro_tetris.sh  run_gpt54_avalon.sh  run_gpt54_avalon_single_agent.sh  run_gpt54_diplomacy.sh  (+10 more)
(+736 files in other folders)
